Fixed Some Issues